# stake-o-matic

bot/: Cargo.toml
bot/src/: backfill_reporting.rs  export.rs  main.rs  rpc_client_utils.rs  stake_pool_v0.rs  validator_list.rs
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
