[package]
name = "solana-foundation-delegation-program-cli"
version = "1.0.6"
edition = "2018"
authors = ["Solana Maintainers <maintainers@solana.org>"]
license = "Apache-2.0"
description = "Solana Foundation Delegation Program Command-line Utility"
repository = "https://github.com/solana-labs/stake-o-matic"
readme = "README.md"

[[bin]]
name = "solana-foundation-delegation-program"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
solana-account-decoder = "=1.14.3"
solana-clap-utils = "=1.14.3"
solana-cli-config = "=1.14.3"
solana-client = "=1.14.3"
solana-foundation-delegation-program-registry = { version = "1.0.1", path = "../program" }
solana-logger = "=1.14.3"
solana-remote-wallet = "=1.14.3"
solana-sdk = "=1.14.3"
tokio = { version = "1", features = ["full"] }
